--- a/Software/Dino_Sokec/ClassLibrary2/App.config
+++ b/Software/Dino_Sokec/ClassLibrary2/App.config
@@ -5,11 +5,18 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 	</configSections>
 	<entityFramework>
+		<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+			<parameters>
+				<parameter value="v11.0" />
+			</parameters>
+		</defaultConnectionFactory>
 		<providers>
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
 	<connectionStrings>
-		
-	<add name="Entiteti" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;persist security info=True;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" /></connectionStrings>
+		<!--<add name="Entiteti" connectionString="metadata=res://*/edmxResourcesToEmbed.Model1.csdl|res://*/edmxResourcesToEmbed.Model1.ssdl|res://*/edmxResourcesToEmbed.Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;persist security info=True;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />-->
+		<add name="Entiteti" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;persist security info=True;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+		<!--<add name="Entiteti" connectionString="metadata=res://*/;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;persist security info=True;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />-->
+	</connectionStrings>
 </configuration>
