--- a/Software/Dino_Sokec/ItronicStore/App.config
+++ b/Software/Dino_Sokec/ItronicStore/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="Entiteti" connectionString="metadata=res://*/TrgovinaItronic.csdl|res://*/TrgovinaItronic.ssdl|res://*/TrgovinaItronic.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
+	  <add name="Entiteti" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string='data source=31.147.204.119\PISERVER,1433;initial catalog=PI21-46_DB;persist security info=True;user id=PI21-46_User;password=&quot;a4*IK6S=&quot;;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
